Subo la parte logica de las interfaces, sim embargo debo hacerle unos ajustes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Bibliotaca-Sistema
-main.class=
+main.class=autonoma.bibliotecagit.app.main.SistemaBiblioteca
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
